Fixed: Layout issues in post.php, edit.php and other files due to over large signature input field.

--- a/forum/styles/make_style.css
+++ b/forum/styles/make_style.css
@@ -990,8 +990,12 @@ a {
     width: 190px
 }
 
+.edit_signature_content {
+    width: 550px;
+}
+
 .signature_content {
-    width: 550px
+    width: 480px;
 }
 
 .link_hidden {
